fix user table
